--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^2.9.4",
+    "chartjs-plugin-labels": "^1.1.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
     "react-datepicker": "^3.8.0",
